# whisper-transcript-live

./: .gitignore  app.py  audio_format_conversion.py  audio_to_text.ipynb  openai_whisper.py  pyproject.toml  transfromers_whisper(temp_fix).py
static/: script.js  styles.css
templates/: index.html
ui/: index.html  script.js  styles.css
utils/: audio_format_conversion.py  openai_whisper.py
